docs: optimize java and os articles